# flights

./: .cursorrules  .gitignore  .json  404.html  CACHE_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  LICENSE  PARSER_ANALYSIS_RESULTS.md  Pipfile  README.md  STRUCTURAL_MATCHING_SUMMARY.md  _generated_enum.py  airports.csv  airports.html  analyze_connections.py  analyze_enrichment_coverage.py  analyze_flight_matching.py  analyze_js_parser_issue.py  analyze_js_structure.py  analyze_keyword_contexts.py  analyze_missing_fields.py  analyze_nested_structure.py  analyze_structure_matching.py  bright_data_flight_containers.html  check_airports.py  comprehensive_data_extraction.py  data_discovery.ipynb  debug_airport_format.py  debug_airport_issue.py  debug_connecting_flights.html  debug_connecting_flights2.html  debug_container_items.py  debug_containers.py  debug_direct_flight_aircraft.py  debug_html_extraction.py  debug_html_structure.py  debug_hybrid_matching.py  debug_matching.py  debug_raw_html.py  (+94 more)
.cursor/rules/: documentation.mdc  enums-generation.mdc  fetch-strategies.mdc  project-structure.mdc  protobuf.mdc  python-conventions.mdc  testing.mdc
.github/workflows/: ci.yml
Archive/: backup_main.py
docs/: airports.md  cli.md  fallbacks.md  filters.md  index.md  local.md
fast_flights/: __init__.py  airport_data.py  bright_data_fetch.py  cache.py  cli.py  cookies_impl.py  cookies_pb2.py  core.py  decoder.py  exceptions.py  fallback_playwright.py  fetcher.py  filter.py  flights.proto  flights_impl.py  flights_pb2.py  local_playwright.py  model.py  parser.py  primp.py  querying.py  return_flight.py  schema.py  search.py  types.py  validation.py
fast_flights/integrations/: __init__.py  base.py  bright_data.py
fast_flights/pb/: flights_pb2.py
fflights/: __init__.py  fetcher.py  model.py  parser.py  querying.py  types.py
fflights/pb/: flights.proto  flights_pb2.pyi
flights/: schema.py
legacy/: pyproject.toml
legacy/fast_flights/: cookies.proto  cookies_pb2.py  core.py  decoder.py  fallback_playwright.py  filter.py  flights.proto  flights_impl.py  flights_pb2.py  local_playwright.py  primp.py  primp.pyi  search.py
notebooks/: 00_flights.ipynb
python/airflights/: __init__.py  airflights.pyi  core.py  filter_builder.py  primp.py  primp.pyi  utils.py
python/flights/: __init__.py
python/tests/: test_all.py
scripts/: extract_currencies.py  extract_langs.py
search/: search_index.js  search_index.json
src/: lib.rs  tfs.rs
src/protos/: flights.proto  flights.rs  mod.rs
tests/: test_validations.py
visual_debug_20250709_193120/: report.html
visual_validation/: validation_report_20250709_185828.html  validation_report_20250709_185928.html
visual_validation_fixed/: validation_report_20250709_190743.html
zh-TW/: airports.html  fallbacks.html  filters.html  index.html  local.html
