[package]
name = "airflights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "airflights"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
base64_light = "0.1.5"
pyo3 = "0.22.0"
quick-protobuf = "0.8.1"
rand = "0.8.5"
