[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fast-flights-unoff"
version = "0.1.0"
description = "An unofficial, extended version of the fast, robust, strongly-typed Google Flights scraper (API)."
keywords = ["flights", "google", "google-flights", "scraper", "protobuf", "travel", "trip", "passengers", "airport"]
authors = [
  { name = "atharvvvg", email = "atharv230303@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "primp",
  "protobuf>=5.27.0",
  "selectolax",
]

[project.optional-dependencies]
local = [
    "playwright"
]

[project.urls]
"Source" = "https://github.com/atharvvvg/google-flights-scraper"
"Issues" = "https://github.com/atharvvvg/google-flights-scraper/issues"
"Original Source" = "https://github.com/AWeirdDev/flights"
"Documentation" = "https://aweirddev.github.io/flights/"

[tool.setuptools]
packages = [
    "fast_flights"
]

[tool.pyright]
pythonVersion = '3.8'

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
